internal/xds/translator/testdata/out/xds-ir/multiple-listeners-same-port-with-different-filters.routes.yaml
- ignorePortInHostMatching: true
  name: default/gateway-1/http
  virtualHosts:
  - domains:
    - www.foo.com
    name: default/gateway-1/http/www_foo_com
    routes:
    - match:
        pathSeparatedPrefix: /foo1
      name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.basic_auth/securitypolicy/default/policy-for-http-route-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.basic_auth.v3.BasicAuthPerRoute
          users:
            inlineBytes: dXNlcjE6e1NIQX10RVNzQm1FL3lOWTNsYjZhMEw2dlZRRVpOcXc9CnVzZXIyOntTSEF9RUo5TFBGRFhzTjl5blNtYnh2anA3NUJtbHg4PQo=
    - match:
        pathSeparatedPrefix: /foo2
      name: httproute/default/httproute-2/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/securitypolicy/default/policy-for-http-route-2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings: {}
  - domains:
    - www.bar.com
    name: default/gateway-2/http/www_bar_com
    routes:
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-3/rule/0/match/0/www_bar_com
      route:
        cluster: httproute/default/httproute-3/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            - email
            - profile
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
            credentials:
              clientId: client.oauth.foo.com
              cookieNames:
                bearerToken: AccessToken-5F93C2E4
                codeVerifier: OauthCodeVerifier-5F93C2E4
                idToken: IdToken-5F93C2E4
                oauthExpires: OauthExpires-5F93C2E4
                oauthHmac: OauthHMAC-5F93C2E4
                oauthNonce: OauthNonce-5F93C2E4
                refreshToken: RefreshToken-5F93C2E4
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/default/policy-for-gateway-2
                sdsConfig:
                  ads: {}
                  initialFetchTimeout: 0s
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/default/policy-for-gateway-2
                sdsConfig:
                  ads: {}
                  initialFetchTimeout: 0s
                  resourceApiVersion: V3
            preserveAuthorizationHeader: true
            redirectPathMatcher:
              path:
                exact: /foo/oauth2/callback
            redirectUri: https://www.example.com/foo/oauth2/callback
            signoutPath:
              path:
                exact: /foo/logout
            statPrefix: securitypolicy/default/policy-for-gateway-2
            tokenEndpoint:
              cluster: oauth_foo_com_443
              timeout: 10s
              uri: https://oauth.foo.com/token
            useRefreshToken: true
